# raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  raytracer.sh
include/: aabb.h  bvh.h  camera.h  color.h  common.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  material.h  my_stb_image.h  perlin.h  quad.h  ray.h  sphere.h  texture.h  triangle.h  vec3.h
src/: main.cpp
